feat: 기관 보고용 사용자 데이터 제공 API 개발 완료 (#107)